refactoring to directives instead of a controller

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,9 @@
   <meta charset="UTF-8">
   <title></title>
 </head>
-<body ng-controller="AppController as App">
+<body>
 
-<h1 ng-bind="App.title"></h1>
-<hr/>
-
-<pre ng-bind="App.info | json "></pre>
-
-
+<app></app>
 
 <script src="bundle.js"></script>
 </body>
